--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
               with:
                 server: ${{ secrets.ftp_host }
                 username: git
-                local-dir: ./
+                local-dir: ./site/
                 password: ${{ secrets.ftp_password }}
               env:
                   user_name: "github-actions[bot]"
