--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v2
 
+            - name: Deploy over FTP
               uses: SamKirkland/FTP-Deploy-Action@4.1.0
               with:
                 server: ${{ secrets.ftp_host }
