--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Deploy over FTP
               uses: SamKirkland/FTP-Deploy-Action@4.1.0
               with:
-                server: ${{ secrets.ftp_host }
+                server: ${{ secrets.ftp_host }}
                 username: git
                 local-dir: ./site/
                 password: ${{ secrets.ftp_password }}
